--- a/waph.html
+++ b/waph.html
@@ -1,1 +1,38 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Web Application Programming and Hacking</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
+</head>
+<body class="bg-light">
+    <div class="container">
+        <h1 class="text-center text-primary my-5">Web Application Programming and Hacking</h1>
+        <p>This course covers front-end web development, including various hands-on projects...</p>
+
+        <div class="about-section my-5">
+            <h2 class="text-secondary">About</h2>
+            <p>
+                <!-- Edit this section with details about the course, your experiences, and other relevant information -->
+                This section provides an overview of the course, including objectives, key topics covered, and the overall learning experience. You can include more details about the instructor, course duration, and other pertinent information.
+            </p>
+        </div>
+
+        <div class="projects-section my-5">
+            <h2 class="text-secondary">Projects and Assignments</h2>
+            <ul class="list-group">
+                <!-- Add your projects and assignments here -->
+                <li class="list-group-item">Project 1: Front-end Web Development with Personal Profile Website</li>
+                <li class="list-group-item">Project 2: Interactive Web Application with API Integration</li>
+                <li class="list-group-item">Assignment 1: HTML and CSS Basics</li>
+                <li class="list-group-item">Assignment 2: JavaScript and jQuery</li>
+                <li class="list-group-item">Assignment 3: API Usage and AJAX</li>
+            </ul>
+        </div>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+</body>
+</html>
 
