--- a/waph.html
+++ b/waph.html
@@ -6,6 +6,9 @@
 <body>
     <div class="container">
         <h1>Web Application Programming and Hacking</h1>
+        <h2>Front-end Web Development Lab</h2>
+        <h3>Instructor: Dr. Phu Phung</h3>
+        <h3>Student: Muhanad Al-Khasawneh</h3>
         <p>This course covers front-end web development, including various hands-on projects...</p>
 
         <div class="section">
