--- a/waph.html
+++ b/waph.html
@@ -9,6 +9,8 @@
         <h2>Front-end Web Development Lab</h2>
         <h3>Instructor: Dr. Phu Phung</h3>
         <h3>Student: Muhanad Al-Khasawneh</h3>
+        <p>A simple HTML page</p>
+        <p>Using the W3Schools template</p>
         <p>This course covers front-end web development, including various hands-on projects...</p>
 
         <div class="section">
@@ -33,3 +35,4 @@
     </div>
 </body>
 </html>
+
