--- a/waph.html
+++ b/waph.html
@@ -10,7 +10,7 @@
         <h3>Instructor: Dr. Phu Phung</h3>
         <h3>Student: Muhanad Al-Khasawneh</h3>
         <p>A simple HTML page</p>
-        <p>Using the W3Schools template</p>
+        Using the <a href="https://ww.w3schools.com/html" target = "_blank"> W3Schools template</a>
         
 
         <div class="section">
