--- a/waph.html
+++ b/waph.html
@@ -17,7 +17,7 @@
             <h2>About</h2>
             <p>
                 <!-- Edit this section with details about the course, your experiences, and other relevant information -->
-                This section provides an overview of the course, including objectives, key topics covered, and the overall learning experience. You can include more details about the instructor, course duration, and other pertinent information.
+                In this cource we are learing the Front-end using Ubuntu using the languages C and Java-Script. we are learing to make html files and how to operate the websites and add cool fuetuers onto the website like a clock and our email, we also had added jokes on the website.
             </p>
         </div>
 
