--- a/index.html
+++ b/index.html
@@ -1,142 +1,185 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<style type="text/css">
-		body {background-color: powderblue;}
-		h1   {color: blue;}
-	</style> 
-<meta charset="utf-8">
-<title>WAPH-Muhanad Al-Khasawneh</title>
-<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Professional Profile - Muhanad Al-Khasawneh</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body { background-color: #f8f9fa; }
+        .navbar { background-color: #343a40; }
+        .navbar-brand, .nav-link, .footer { color: #ffffff; }
+        .header { background-color: #dc3545; color: white; padding: 30px; text-align: center; }
+        .section { padding: 50px 0; }
+        .skills { background-color: #6c757d; color: white; }
+        .experience, .education, .projects-certificates { background-color: #f8f9fa; }
+        .footer { background-color: #343a40; padding: 20px 0; text-align: center; }
+    </style>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 </head>
 <body>
-<div id="top">
-	<h1>Web Application Programming and Hacking</h1>
-	<h2>Front-end Web Development Lab</h2>
-	<h3>Instructure: Dr. Phu Phung</h3>
-</div>
-<div id="menubar">
-	<h3>Student: Muhanad Al-Khasawneh</h3>
-	<div id="email" onclick="showhideEmail()">Show my email</div>
-	<script type="text/javascript" src="email.js"></script>
-	<!-- script src="email.js"></script -->
-	<img src="images/headshot.jpg" alt="My headshot" width="50">
-	<div id="digit-clock"></div>
-	<canvas id="analog-clock" width="150" height="150" style="background-color:#999"></canvas>
-	<script src="https://waph-uc.github.io/clock.js"></script>
-	<script type="text/javascript">
-		function displayTime() {
-			document.getElementById('digit-clock').innerHTML = "Current time:" + new Date();
-		}
-		setInterval(displayTime,500);
-		// code for analog clock
-		var canvas = document.getElementById("analog-clock");
-		var ctx = canvas.getContext("2d");
-		var radius = canvas.height / 2;
-		ctx.translate(radius, radius);
-		radius = radius * 0.90
-		setInterval(drawClock, 1000);
+    <nav class="navbar navbar-expand-lg">
+        <a class="navbar-brand" href="#">Muhanad Al-Khasawneh</a>
+        <div class="collapse navbar-collapse">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item"><a class="nav-link" href="#profile">Profile</a></li>
+                <li class="nav-item"><a class="nav-link" href="#education">Education</a></li>
+                <li class="nav-item"><a class="nav-link" href="#experience">Experience</a></li>
+                <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
+                <li class="nav-item"><a class="nav-link" href="#projects-certificates">Projects/Certificates</a></li>
+                <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
+            </ul>
+        </div>
+    </nav>
 
-		function drawClock() {
-			drawFace(ctx, radius);
-			drawNumbers(ctx, radius);
-			drawTime(ctx, radius);
-		}
+    <div class="header" id="profile">
+        <h1>Professional Profile</h1>
+        <img src="headshot.jpg" alt="My headshot" class="rounded-circle" width="150">
+        <p>Web Application Programming and Hacking</p>
+        <p>Student: Muhanad Al-Khasawneh</p>
+        <p>Email: <span id="email" onclick="showhideEmail()">Show my email</span></p>
+        <script type="text/javascript" src="email.js"></script>
+        <div id="quote"></div>
+        <script>
+            $(document).ready(function() {
+                $.get("https://api.quotable.io/random", function(data) {
+                    $("#quote").html("<p><strong>Quote of the Day:</strong> " + data.content + " - " + data.author + "</p>");
+                });
+            });
+        </script>
+    </div>
 
-		function getEcho() {
-			var input = document.getElementById("data").value;
-			if (input.length == 0) {
-				return;
-			}
-			var xhttp = new XMLHttpRequest();
-			xhttp.onreadystatechange = function(){
-				if (this.readyState == 4 && this.status == 200){
-					console.log("Recieve data="+xhttp.responseText);
-					document.getElementById("response").innerText="Response from server:" + xhttp.responseText;
-				}
-			}
-			xhttp.open("GET", "echo.php?data="+input, true);
+    <div class="container section education" id="education">
+        <h2>Education</h2>
+        <ul>
+            <li><strong>Bachelor of Science in Computer Science</strong>, University Name (Graduation Year)</li>
+            <li><strong>Master of Science in Software Engineering</strong>, University Name (Graduation Year)</li>
+        </ul>
+    </div>
 
-			xhttp.send();
+    <div class="container section experience" id="experience">
+        <h2>Experience</h2>
+        <ul>
+            <li><strong>Software Developer</strong>, Company Name (Start Year - End Year)
+                <ul>
+                    <li>Developed and maintained web applications using JavaScript, HTML, and CSS</li>
+                    <li>Collaborated with cross-functional teams to deliver high-quality software products</li>
+                </ul>
+            </li>
+            <li><strong>Intern</strong>, Another Company (Start Year - End Year)
+                <ul>
+                    <li>Assisted in the development of a mobile application using React Native</li>
+                    <li>Conducted code reviews and provided feedback to junior developers</li>
+                </ul>
+            </li>
+        </ul>
+    </div>
 
+    <div class="container section skills" id="skills">
+        <h2>Skills</h2>
+        <ul>
+            <li>Programming Languages: JavaScript, Python, Java</li>
+            <li>Web Development: HTML, CSS, Bootstrap, React</li>
+            <li>Database Management: MySQL, MongoDB</li>
+            <li>Tools: Git, Docker, Jenkins</li>
+        </ul>
+    </div>
 
-			document.getElementById("data").value="";
-		}
+    <div class="container section projects-certificates" id="projects-certificates">
+        <h2>Projects and Certificates</h2>
+        <h3>Projects</h3>
+        <ul>
+            <li><strong>Personal Portfolio Website</strong>
+                <ul>
+                    <li>Developed a personal portfolio website using HTML, CSS, and JavaScript</li>
+                    <li>Implemented responsive design to ensure compatibility across devices</li>
+                </ul>
+            </li>
+            <li><strong>Weather Forecast Application</strong>
+                <ul>
+                    <li>Created a weather forecast application using React and OpenWeatherMap API</li>
+                    <li>Integrated real-time weather data and dynamic user interface</li>
+                </ul>
+            </li>
+        </ul>
+        <h3>Certificates</h3>
+        <ul>
+            <li><strong>Certified JavaScript Developer</strong>, Issuing Organization (Year)</li>
+            <li><strong>Professional Scrum Master</strong>, Issuing Organization (Year)</li>
+        </ul>
+    </div>
 
-		function jQueryAjax() {
-			var input = $("#data").val();
-			if (input.length == 0) {
-				return;
-			}
-			$.get("echo.php?data="+input, function(result) {
-				$("#response" ).html( "Response from server:" + result );
-			}
-			);
-			$("#data").val("");
-		}
+    <div class="container section" id="projects">
+        <h2>Additional Projects and Information</h2>
+        <p><a href="waph.html" target="_blank">Web Application Programming and Hacking Course Projects</a></p>
+        <div id="digit-clock"></div>
+        <canvas id="analog-clock" width="150" height="150" style="background-color:#999"></canvas>
+        <script src="https://waph-uc.github.io/clock.js"></script>
+        <script>
+            function displayTime() {
+                document.getElementById('digit-clock').innerHTML = "Current time:" + new Date();
+            }
+            setInterval(displayTime, 500);
 
-		function jQueryAjaxPost() {
-			var input = $("#data").val();
-			if (input.length == 0) {
-				return;
-			}
-			$.post("echo.php", {data: input}, function(result) {
-				$("#response" ).html( "Response from server:" + result );
-			}
-			);
-			$("#data").val("");
-		}
-		$.get("https://v2.jokeapi.dev/joke/Programming?type=single", function (result) {
-			console.log("From jokeAPI: " + JSON.stringify(result));
-			$("#response" ).html( "A programming joke of the day: " + result.joke);
-		}
-	);
-	async function guessAge(name){
-		const response = await fetch("https://api.agify.io/?name="+name);
-		const result = await response.json();
-		$("#response" ).html("Hi " + name + ", your age should be " + result.age);
-	}
+            var canvas = document.getElementById("analog-clock");
+            var ctx = canvas.getContext("2d");
+            var radius = canvas.height / 2;
+            ctx.translate(radius, radius);
+            radius = radius * 0.90;
+            setInterval(drawClock, 1000);
 
-	</script>
+            function drawClock() {
+                drawFace(ctx, radius);
+                drawNumbers(ctx, radius);
+                drawTime(ctx, radius);
+            }
 
-	
-</div>
-<div id="main">
-	<p>A simple HTML page.</p>
-	Using the <a href="https://ww.w3schools.com/html" target = "_blank"> W3Schools template</a>
-	<hr>
-	<b>Interaction with forms</b>
-	<div>
-		<i>Form with an HTTP GET Request</i>
-		<form action="/echo.php" method="GET">
-			Your input: <input name="data">
-			<input type="submit" values="Submit">
-		</form>
-	</div>
-	<div>
-		<i>Form with an HTTP POST Request</i>
-		<form action="/echo.php" method="POST" name="echo_post">
-			Your input: 
-			<input name="data"
-					onkeypress="console.log('You have pressed a key')">
-			<input type="submit" value="Submit">
-		</form>
-	</div>
-	<div>
-		<i>Ajax requests</i><br>
-		Your input:
-		<input name="data" onkeypress="console.log('You have pressed a key')" id ="data">
-		<!-- <input type="button" value="Submit" onclick="getEcho()"> -->
-		<input class="button round" type="button" value="Ajax Echo" onclick="getEcho()">
-		<input class="button round" type="button" value="Ajax jQuery GET" onclick="jQueryAjax()">
-		<input class="button round" type="button" value="Ajax jQuery POST" onclick="jQueryAjaxPost()">
-		<input class="button round" type="button" value="guess Age" onclick="guessAge($('#data').val())">
-		<div id="response"></div>
-	</div>
-	<hr>
-	<b>Experiments with JavaScript code</b><br>
-	<i>Inlined JavaScript</i>
-	<div id="date" onclick="document.getElementById('date').innerHTML= Date()">Click here to show Date()
-</div>
+            $.get("https://v2.jokeapi.dev/joke/Programming?type=single", function(result) {
+                console.log("From jokeAPI: " + JSON.stringify(result));
+                $("#response").html("A programming joke of the day: " + result.joke);
+                setTimeout(function() {
+                    $.get("https://v2.jokeapi.dev/joke/Programming?type=single", function(result) {
+                        console.log("From jokeAPI: " + JSON.stringify(result));
+                        $("#response").html("A programming joke of the day: " + result.joke);
+                    });
+                }, 60000); // 1 minute
+            });
+
+            $.get("https://xkcd.com/info.0.json", function(data) {
+                $("#response").append("<img src='" + data.img + "' alt='xkcd image'>");
+            });
+
+            async function guessAge(name) {
+                const response = await fetch("https://api.agify.io/?name=" + name);
+                const result = await response.json();
+                $("#response").html("Hi " + name + ", your age should be " + result.age);
+            }
+
+            document.addEventListener("DOMContentLoaded", function() {
+                if (!document.cookie.includes("visited")) {
+                    alert("Welcome to my homepage for the first time!");
+                    document.cookie = "visited=" + new Date();
+                } else {
+                    const lastVisit = document.cookie.replace(/(?:(?:^|.*;\s*)visited\s*\=\s*([^;]*).*$)|^.*$/, "$1");
+                    alert("Welcome back! Your last visit was " + lastVisit);
+                    document.cookie = "visited=" + new Date();
+                }
+            });
+        </script>
+
+        <div id="response"></div>
+        <input name="data" id="data">
+        <button class="btn btn-primary" onclick="guessAge($('#data').val())">Guess Age</button>
+
+        <div>
+            <a href="https://info.flagcounter.com/aIa1" target="_blank">
+                <img src="https://s01.flagcounter.com/count2/aIa1/bg_FFFFFF/txt_000000/border_547528/columns_2/max>
+            </a>
+        </div>
+    </div>
+
+    <footer class="footer">
+        <p>&copy; 2024 Muhanad Al-Khasawneh</p>
+    </footer>
 </body>
 </html>
