--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <title>Professional Profile - Muhanad Al-Khasawneh</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
-        body { background-color: #f8f9fa; }
-        .navbar { background-color: #343a40; }
+        body { background-color: #ffffff; color: #333333; }
+        .navbar { background-color: #0056b3; }
         .navbar-brand, .nav-link, .footer { color: #ffffff; }
-        .header { background-color: #dc3545; color: white; padding: 30px; text-align: center; }
+        .header { background-color: #007bff; color: white; padding: 30px; text-align: center; }
         .section { padding: 50px 0; }
-        .skills { background-color: #6c757d; color: white; }
-        .experience, .education, .projects-certificates { background-color: #f8f9fa; }
-        .footer { background-color: #343a40; padding: 20px 0; text-align: center; }
+        .skills { background-color: #e9ecef; color: #333333; }
+        .experience, .education, .projects-certificates { background-color: #ffffff; }
+        .footer { background-color: #0056b3; padding: 20px 0; text-align: center; color: #ffffff; }
     </style>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 </head>
@@ -179,7 +179,4 @@
     </div>
 
     <footer class="footer">
-        <p>&copy; 2024 Muhanad Al-Khasawneh</p>
-    </footer>
-</body>
-</html>
+
