--- a/index.html
+++ b/index.html
@@ -1,63 +1,96 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Professional Profile - Muhanad Al-Khasawneh</title>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
-        body { background-color: #ffffff; color: #333333; }
-        .navbar { background-color: #0056b3; }
-        .navbar-brand, .nav-link, .footer { color: #ffffff; }
-        .header { background-color: #007bff; color: white; padding: 30px; text-align: center; }
-        .section { padding: 50px 0; }
-        .skills { background-color: #e9ecef; color: #333333; }
-        .experience, .education, .projects-certificates { background-color: #ffffff; }
-        .footer { background-color: #0056b3; padding: 20px 0; text-align: center; color: #ffffff; }
+        body { 
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f8f9fa;
+            color: #333;
+        }
+        header {
+            background-color: #343a40;
+            color: #ffffff;
+            text-align: center;
+            padding: 20px 0;
+        }
+        nav {
+            background-color: #0056b3;
+            color: #ffffff;
+            text-align: center;
+            padding: 10px 0;
+        }
+        nav a {
+            color: #ffffff;
+            text-decoration: none;
+            margin: 0 10px;
+        }
+        section {
+            padding: 50px 20px;
+        }
+        .container {
+            max-width: 1200px;
+            margin: auto;
+            overflow: hidden;
+        }
+        .container h2 {
+            text-align: center;
+            margin-bottom: 30px;
+        }
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        ul li {
+            margin-bottom: 20px;
+        }
+        footer {
+            background-color: #343a40;
+            color: #ffffff;
+            text-align: center;
+            padding: 20px 0;
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+        }
     </style>
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg">
-        <a class="navbar-brand" href="#">Muhanad Al-Khasawneh</a>
-        <div class="collapse navbar-collapse">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item"><a class="nav-link" href="#profile">Profile</a></li>
-                <li class="nav-item"><a class="nav-link" href="#education">Education</a></li>
-                <li class="nav-item"><a class="nav-link" href="#experience">Experience</a></li>
-                <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
-                <li class="nav-item"><a class="nav-link" href="#projects-certificates">Projects/Certificates</a></li>
-                <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
-            </ul>
-        </div>
-    </nav>
-
-    <div class="header" id="profile">
+    <header>
         <h1>Professional Profile</h1>
-        <img src="headshot.jpg" alt="My headshot" class="rounded-circle" width="150">
+        <img src="headshot.jpg" alt="My headshot" width="150">
         <p>Web Application Programming and Hacking</p>
         <p>Student: Muhanad Al-Khasawneh</p>
         <p>Email: <span id="email" onclick="showhideEmail()">Show my email</span></p>
-        <script type="text/javascript" src="email.js"></script>
-        <div id="quote"></div>
-        <script>
-            $(document).ready(function() {
-                $.get("https://api.quotable.io/random", function(data) {
-                    $("#quote").html("<p><strong>Quote of the Day:</strong> " + data.content + " - " + data.author + "</p>");
-                });
-            });
-        </script>
-    </div>
+    </header>
+    
+    <nav>
+        <a href="#profile">Profile</a>
+        <a href="#education">Education</a>
+        <a href="#experience">Experience</a>
+        <a href="#skills">Skills</a>
+        <a href="#projects-certificates">Projects/Certificates</a>
+        <a href="#projects">Projects</a>
+    </nav>
 
-    <div class="container section education" id="education">
+    <section id="profile" class="container">
+        <h2>Profile</h2>
+        <p>Insert your profile content here.</p>
+    </section>
+
+    <section id="education" class="container">
         <h2>Education</h2>
         <ul>
             <li><strong>Bachelor of Science in Computer Science</strong>, University Name (Graduation Year)</li>
             <li><strong>Master of Science in Software Engineering</strong>, University Name (Graduation Year)</li>
         </ul>
-    </div>
+    </section>
 
-    <div class="container section experience" id="experience">
+    <section id="experience" class="container">
         <h2>Experience</h2>
         <ul>
             <li><strong>Software Developer</strong>, Company Name (Start Year - End Year)
@@ -73,9 +106,9 @@
                 </ul>
             </li>
         </ul>
-    </div>
+    </section>
 
-    <div class="container section skills" id="skills">
+    <section id="skills" class="container">
         <h2>Skills</h2>
         <ul>
             <li>Programming Languages: JavaScript, Python, Java</li>
@@ -83,9 +116,9 @@
             <li>Database Management: MySQL, MongoDB</li>
             <li>Tools: Git, Docker, Jenkins</li>
         </ul>
-    </div>
+    </section>
 
-    <div class="container section projects-certificates" id="projects-certificates">
+    <section id="projects-certificates" class="container">
         <h2>Projects and Certificates</h2>
         <h3>Projects</h3>
         <ul>
@@ -95,88 +128,4 @@
                     <li>Implemented responsive design to ensure compatibility across devices</li>
                 </ul>
             </li>
-            <li><strong>Weather Forecast Application</strong>
-                <ul>
-                    <li>Created a weather forecast application using React and OpenWeatherMap API</li>
-                    <li>Integrated real-time weather data and dynamic user interface</li>
-                </ul>
-            </li>
-        </ul>
-        <h3>Certificates</h3>
-        <ul>
-            <li><strong>Certified JavaScript Developer</strong>, Issuing Organization (Year)</li>
-            <li><strong>Professional Scrum Master</strong>, Issuing Organization (Year)</li>
-        </ul>
-    </div>
-
-    <div class="container section" id="projects">
-        <h2>Additional Projects and Information</h2>
-        <p><a href="waph.html" target="_blank">Web Application Programming and Hacking Course Projects</a></p>
-        <div id="digit-clock"></div>
-        <canvas id="analog-clock" width="150" height="150" style="background-color:#999"></canvas>
-        <script src="https://waph-uc.github.io/clock.js"></script>
-        <script>
-            function displayTime() {
-                document.getElementById('digit-clock').innerHTML = "Current time:" + new Date();
-            }
-            setInterval(displayTime, 500);
-
-            var canvas = document.getElementById("analog-clock");
-            var ctx = canvas.getContext("2d");
-            var radius = canvas.height / 2;
-            ctx.translate(radius, radius);
-            radius = radius * 0.90;
-            setInterval(drawClock, 1000);
-
-            function drawClock() {
-                drawFace(ctx, radius);
-                drawNumbers(ctx, radius);
-                drawTime(ctx, radius);
-            }
-
-            $.get("https://v2.jokeapi.dev/joke/Programming?type=single", function(result) {
-                console.log("From jokeAPI: " + JSON.stringify(result));
-                $("#response").html("A programming joke of the day: " + result.joke);
-                setTimeout(function() {
-                    $.get("https://v2.jokeapi.dev/joke/Programming?type=single", function(result) {
-                        console.log("From jokeAPI: " + JSON.stringify(result));
-                        $("#response").html("A programming joke of the day: " + result.joke);
-                    });
-                }, 60000); // 1 minute
-            });
-
-            $.get("https://xkcd.com/info.0.json", function(data) {
-                $("#response").append("<img src='" + data.img + "' alt='xkcd image'>");
-            });
-
-            async function guessAge(name) {
-                const response = await fetch("https://api.agify.io/?name=" + name);
-                const result = await response.json();
-                $("#response").html("Hi " + name + ", your age should be " + result.age);
-            }
-
-            document.addEventListener("DOMContentLoaded", function() {
-                if (!document.cookie.includes("visited")) {
-                    alert("Welcome to my homepage for the first time!");
-                    document.cookie = "visited=" + new Date();
-                } else {
-                    const lastVisit = document.cookie.replace(/(?:(?:^|.*;\s*)visited\s*\=\s*([^;]*).*$)|^.*$/, "$1");
-                    alert("Welcome back! Your last visit was " + lastVisit);
-                    document.cookie = "visited=" + new Date();
-                }
-            });
-        </script>
-
-        <div id="response"></div>
-        <input name="data" id="data">
-        <button class="btn btn-primary" onclick="guessAge($('#data').val())">Guess Age</button>
-
-        <div>
-            <a href="https://info.flagcounter.com/aIa1" target="_blank">
-                <img src="https://s01.flagcounter.com/count2/aIa1/bg_FFFFFF/txt_000000/border_547528/columns_2/max>
-            </a>
-        </div>
-    </div>
-
-    <footer class="footer">
-
+            <
