--- a/index.html
+++ b/index.html
@@ -146,10 +146,44 @@
         </section>
 
         <section id="projects">
-            <h2>Additional Projects and Information</h2>
-            <p><a href="waph.html" target="_blank">Web Application Programming and Hacking Course Projects</a></p>
-            <!-- Insert any additional content or projects here -->
-        </section>
+            <section id="projects">
+    <h2>Additional Projects and Information</h2>
+    <p><a href="waph.html" target="_blank">Web Application Programming and Hacking Course Projects</a></p>
+    <div id="digit-clock"></div>
+    <canvas id="analog-clock" width="150" height="150" style="background-color:#999"></canvas>
+    <script src="https://waph-uc.github.io/clock.js"></script>
+    <script>
+        function displayTime() {
+            document.getElementById('digit-clock').innerHTML = "Current time:" + new Date();
+        }
+        setInterval(displayTime, 500);
+
+        var canvas = document.getElementById("analog-clock");
+        var ctx = canvas.getContext("2d");
+        var radius = canvas.height / 2;
+        ctx.translate(radius, radius);
+        radius = radius * 0.90;
+        setInterval(drawClock, 1000);
+
+        function drawClock() {
+            drawFace(ctx, radius);
+            drawNumbers(ctx, radius);
+            drawTime(ctx, radius);
+        }
+
+        document.addEventListener("DOMContentLoaded", function() {
+            if (!document.cookie.includes("visited")) {
+                alert("Welcome to my homepage for the first time!");
+                document.cookie = "visited=" + new Date();
+            } else {
+                const lastVisit = document.cookie.replace(/(?:(?:^|.*;\s*)visited\s*\=\s*([^;]*).*$)|^.*$/, "$1");
+                alert("Welcome back! Your last visit was " + lastVisit);
+                document.cookie = "visited=" + new Date();
+            }
+        });
+    </script>
+</section>
+
     </div>
 
     <footer>
