--- a/index.html
+++ b/index.html
@@ -1,163 +1,193 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Professional Profile - Muhanad Al-Khasawneh</title>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
-        body { background-color: #f8f9fa; }
-        .navbar { background-color: #343a40; }
-        .navbar-brand, .nav-link, .footer { color: #ffffff; }
-        .header { background-color: #dc3545; color: white; padding: 30px; text-align: center; }
-        .section { padding: 50px 0; }
-        .skills { background-color: #6c757d; color: white; }
-        .experience, .education, .projects-certificates { background-color: #f8f9fa; }
-        .footer { background-color: #343a40; padding: 20px 0; text-align: center; }
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f2f2f2;
+            color: #333;
+        }
+        .container {
+            max-width: 1200px;
+            margin: auto;
+            padding: 20px;
+        }
+        header {
+            background-color: #0056b3;
+            color: #ffffff;
+            padding: 20px;
+            text-align: center;
+        }
+        nav {
+            background-color: #343a40;
+            color: #ffffff;
+            padding: 10px;
+            text-align: center;
+        }
+        nav a {
+            color: #ffffff;
+            text-decoration: none;
+            margin: 0 10px;
+        }
+        section {
+            margin: 20px 0;
+            padding: 20px;
+            background-color: #ffffff;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+            border-radius: 5px;
+        }
+        section h2 {
+            margin-top: 0;
+            font-size: 24px;
+            color: #0056b3;
+        }
+        section ul {
+            padding: 0;
+            list-style-type: none;
+        }
+        section ul li {
+            margin-bottom: 10px;
+        }
+        footer {
+            background-color: #343a40;
+            color: #ffffff;
+            text-align: center;
+            padding: 20px 0;
+        }
     </style>
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg">
-        <a class="navbar-brand" href="#">Muhanad Al-Khasawneh</a>
-        <div class="collapse navbar-collapse">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item"><a class="nav-link" href="#profile">Profile</a></li>
-                <li class="nav-item"><a class="nav-link" href="#education">Education</a></li>
-                <li class="nav-item"><a class="nav-link" href="#experience">Experience</a></li>
-                <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
-                <li class="nav-item"><a class="nav-link" href="#projects-certificates">Projects/Certificates</a></li>
-                <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
-            </ul>
-        </div>
-    </nav>
-
-    <div class="header" id="profile">
+    <header>
         <h1>Professional Profile</h1>
-        <img src="headshot.jpg" alt="My headshot" class="rounded-circle" width="150">
+        <img src="headshot.jpg" alt="My headshot" width="150">
         <p>Web Application Programming and Hacking</p>
         <p>Student: Muhanad Al-Khasawneh</p>
         <p>Email: <span id="email" onclick="showhideEmail()">Show my email</span></p>
-        <script type="text/javascript" src="email.js"></script>
-        <div id="quote"></div>
-        <script>
-            $(document).ready(function() {
-                $.get("https://api.quotable.io/random", function(data) {
-                    $("#quote").html("<p><strong>Quote of the Day:</strong> " + data.content + " - " + data.author + "</p>");
-                });
-            });
-        </script>
-    </div>
+    </header>
+    
+    <nav>
+        <a href="#profile">Profile</a>
+        <a href="#education">Education</a>
+        <a href="#experience">Experience</a>
+        <a href="#skills">Skills</a>
+        <a href="#projects-certificates">Projects/Certificates</a>
+        <a href="#projects">Projects</a>
+    </nav>
 
-    <div class="container section education" id="education">
-        <h2>Education</h2>
-        <ul>
-            <li><strong>Bachelor of Science in Computer Science</strong>, University Name (Graduation Year)</li>
-            <li><strong>Master of Science in Software Engineering</strong>, University Name (Graduation Year)</li>
-        </ul>
-    </div>
+    <div class="container">
+        <section id="profile">
+            <h2>Profile</h2>
+            <p>Insert your profile content here.</p>
+        </section>
 
-    <div class="container section experience" id="experience">
-        <h2>Experience</h2>
-        <ul>
-            <li><strong>Software Developer</strong>, Company Name (Start Year - End Year)
-                <ul>
-                    <li>Developed and maintained web applications using JavaScript, HTML, and CSS</li>
-                    <li>Collaborated with cross-functional teams to deliver high-quality software products</li>
-                </ul>
-            </li>
-            <li><strong>Intern</strong>, Another Company (Start Year - End Year)
-                <ul>
-                    <li>Assisted in the development of a mobile application using React Native</li>
-                    <li>Conducted code reviews and provided feedback to junior developers</li>
-                </ul>
-            </li>
-        </ul>
-    </div>
+        <section id="education">
+            <h2>Education</h2>
+            <ul>
+                <li><strong>Bachelor of Science in Computer Science</strong>, University Name (Graduation Year)</li>
+                <li><strong>Master of Science in Software Engineering</strong>, University Name (Graduation Year)</li>
+            </ul>
+        </section>
 
-    <div class="container section skills" id="skills">
-        <h2>Skills</h2>
-        <ul>
-            <li>Programming Languages: JavaScript, Python, Java</li>
-            <li>Web Development: HTML, CSS, Bootstrap, React</li>
-            <li>Database Management: MySQL, MongoDB</li>
-            <li>Tools: Git, Docker, Jenkins</li>
-        </ul>
-    </div>
+        <section id="experience">
+            <h2>Experience</h2>
+            <ul>
+                <li><strong>Software Developer</strong>, Company Name (Start Year - End Year)
+                    <ul>
+                        <li>Developed and maintained web applications using JavaScript, HTML, and CSS</li>
+                        <li>Collaborated with cross-functional teams to deliver high-quality software products</li>
+                    </ul>
+                </li>
+                <li><strong>Intern</strong>, Another Company (Start Year - End Year)
+                    <ul>
+                        <li>Assisted in the development of a mobile application using React Native</li>
+                        <li>Conducted code reviews and provided feedback to junior developers</li>
+                    </ul>
+                </li>
+            </ul>
+        </section>
 
-    <div class="container section projects-certificates" id="projects-certificates">
-        <h2>Projects and Certificates</h2>
-        <h3>Projects</h3>
-        <ul>
-            <li><strong>Personal Portfolio Website</strong>
-                <ul>
-                    <li>Developed a personal portfolio website using HTML, CSS, and JavaScript</li>
-                    <li>Implemented responsive design to ensure compatibility across devices</li>
-                </ul>
-            </li>
-            <li><strong>Weather Forecast Application</strong>
-                <ul>
-                    <li>Created a weather forecast application using React and OpenWeatherMap API</li>
-                    <li>Integrated real-time weather data and dynamic user interface</li>
-                </ul>
-            </li>
-        </ul>
-        <h3>Certificates</h3>
-        <ul>
-            <li><strong>Certified JavaScript Developer</strong>, Issuing Organization (Year)</li>
-            <li><strong>Professional Scrum Master</strong>, Issuing Organization (Year)</li>
-        </ul>
-    </div>
+        <section id="skills">
+            <h2>Skills</h2>
+            <ul>
+                <li>Programming Languages: JavaScript, Python, Java</li>
+                <li>Web Development: HTML, CSS, Bootstrap, React</li>
+                <li>Database Management: MySQL, MongoDB</li>
+                <li>Tools: Git, Docker, Jenkins</li>
+            </ul>
+        </section>
 
-    <div class="container section" id="projects">
-        <h2>Additional Projects and Information</h2>
-        <p><a href="waph.html" target="_blank">Web Application Programming and Hacking Course Projects</a></p>
-        <div id="digit-clock"></div>
-        <canvas id="analog-clock" width="150" height="150" style="background-color:#999"></canvas>
-        <script src="https://waph-uc.github.io/clock.js"></script>
-        <script>
-            function displayTime() {
-                document.getElementById('digit-clock').innerHTML = "Current time:" + new Date();
-            }
-            setInterval(displayTime, 500);
+        <section id="projects-certificates">
+            <h2>Projects and Certificates</h2>
+            <h3>Projects</h3>
+            <ul>
+                <li><strong>Personal Portfolio Website</strong>
+                    <ul>
+                        <li>Developed a personal portfolio website using HTML, CSS, and JavaScript</li>
+                        <li>Implemented responsive design to ensure compatibility across devices</li>
+                    </ul>
+                </li>
+                <li><strong>Weather Forecast Application</strong>
+                    <ul>
+                        <li>Created a weather forecast application using React and OpenWeatherMap API</li>
+                        <li>Integrated real-time weather data and dynamic user interface</li>
+                    </ul>
+                </li>
+            </ul>
+            <h3>Certificates</h3>
+            <ul>
+                <li><strong>Certified JavaScript Developer</strong>, Issuing Organization (Year)</li>
+                <li><strong>Professional Scrum Master</strong>, Issuing Organization (Year)</li>
+            </ul>
+        </section>
 
-            var canvas = document.getElementById("analog-clock");
-            var ctx = canvas.getContext("2d");
-            var radius = canvas.height / 2;
-            ctx.translate(radius, radius);
-            radius = radius * 0.90;
-            setInterval(drawClock, 1000);
-
-            function drawClock() {
-                drawFace(ctx, radius);
-                drawNumbers(ctx, radius);
-                drawTime(ctx, radius);
-            }
-
-            document.addEventListener("DOMContentLoaded", function() {
-                if (!document.cookie.includes("visited")) {
-                    alert("Welcome to my homepage for the first time!");
-                    document.cookie = "visited=" + new Date();
-                } else {
-                    const lastVisit = document.cookie.replace(/(?:(?:^|.*;\s*)visited\s*\=\s*([^;]*).*$)|^.*$/, "$1");
-                    alert("Welcome back! Your last visit was " + lastVisit);
-                    document.cookie = "visited=" + new Date();
+        <section id="projects">
+            <h2>Additional Projects and Information</h2>
+            <p><a href="waph.html" target="_blank">Web Application Programming and Hacking Course Projects</a></p>
+            <div id="digit-clock"></div>
+            <canvas id="analog-clock" width="150" height="150" style="background-color:#999"></canvas>
+            <script src="https://waph-uc.github.io/clock.js"></script>
+            <script>
+                function displayTime() {
+                    document.getElementById('digit-clock').innerHTML = "Current time: " + new Date();
                 }
-            });
-        </script>
-        <div id="response"></div>
-        <input name="data" id="data">
-        <button class="btn btn-primary" onclick="guessAge($('#data').val())">Guess Age</button>
-        <div>
-            <a href="https://info.flagcounter.com/aIa1" target="_blank">
-                <img src="https://s01.flagcounter.com/count2/aIa1/bg_FFFFFF/txt_000000/border_547528/columns_2/maxflags_12/viewers_0/labels_1/pageviews_1/flags_1/percent_0/" alt="Flag Counter">
-            </a>
-        </div>
+                setInterval(displayTime, 500);
+
+                var canvas = document.getElementById("analog-clock");
+                var ctx = canvas.getContext("2d");
+                var radius = canvas.height / 2;
+                ctx.translate(radius, radius);
+                radius = radius * 0.90;
+                setInterval(drawClock, 1000);
+
+                function drawClock() {
+                    drawFace(ctx, radius);
+                    drawNumbers(ctx, radius);
+                    drawTime(ctx, radius);
+                }
+
+                document.addEventListener("DOMContentLoaded", function() {
+                    if (!document.cookie.includes("visited")) {
+                        alert("Welcome to my homepage for the first time!");
+                        document.cookie = "visited=" + new Date();
+                    } else {
+                        const lastVisit = document.cookie.replace(/(?:(?:^|.*;\s*)visited\s*\=\s*([^;]*).*$)|^.*$/, "$1");
+                        alert("Welcome back! Your last visit was " + lastVisit);
+                        document.cookie = "visited=" + new Date();
+                    }
+                });
+            </script>
+        </section>
     </div>
 
-    <footer class="footer">
+    <footer>
         <p>&copy; 2024 Muhanad Al-Khasawneh</p>
     </footer>
 </body>
 </html>
+
 
