--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 <body>
     <header>
         <h1>Professional Profile</h1>
-        <img src="headshot.jpg" alt="My headshot" width="150">
+        <img src="profilepicresize.jpg" alt="My headshot" width="150">
         <p>Web Application Programming and Hacking</p>
         <p>Student: Muhanad Al-Khasawneh</p>
         <p>Email: <span id="email" onclick="showhideEmail()">alkhasmr@mail.uc.edu</span></p>
